2011-11-28  Simon Hausmann  <simon.hausmann@nokia.com>

        Unreviewed prospective build fix. Touch the file to trigger correct
        rebuild on the Qt mips/sh4/sl bot.

        * wtf/unicode/qt4/UnicodeQt4.h:

2011-11-28  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Remove cruft from project file

        Reviewed by Simon Hausmann.

        * Target.pri:

2011-11-28  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt] WTF should be built as separate static library
        https://bugs.webkit.org/show_bug.cgi?id=73201

        Reviewed by Tor Arne Vestbø.

        * Target.pri: Don't claim to build WTF, as that would cause
        the debug-with-shlibs build to not link in wtf.
        * jsc.pro: Require wtf.
        * wtf/wtf.pri: Removed.
        * wtf/wtf.pro: Added. Pro file to build wtf statically.

2011-11-28  Martin Robinson  <mrobinson@igalia.com>

        [GTK] JavaScriptCore generated sources should build in the DerivedSources directory
        https://bugs.webkit.org/show_bug.cgi?id=73197

        Reviewed by Philippe Normand.

        Build all JavaScriptCore generated sources in DerivedSources.

        * GNUmakefile.am: Update generation rules.
        * GNUmakefile.list.am: Update source lists.

2011-11-27  Filip Pizlo  <fpizlo@apple.com>

        DFG should not emit GetMethod node
        https://bugs.webkit.org/show_bug.cgi?id=73175

        Reviewed by Gavin Barraclough.
        
        Replaces all instances of the GetMethod node with GetById. This appears to
        be a slight win on V8. This patch leaves GetMethod support in the code-base,
        making this decision easy to reverse, for now.

        * dfg/DFGByteCodeParser.cpp:
        (JSC::DFG::ByteCodeParser::parseBlock):

2011-11-26  Hajime Morrita  <morrita@chromium.org>

        Needs WTF_INLINE and JS_INLINE
        https://bugs.webkit.org/show_bug.cgi?id=72853

        Reviewed by Kevin Ollivier.

        Added WTF_HIDDEN, WTF_INLINE and JS_INLINE which